# Staking-Express

./: .gitignore  package-lock.json  package.json  phase9.txt  phases.txt
.github/workflows/: ci.yml  solana.yml
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: InvestorsList.tsx  ProtocolStats.tsx  SolanaProvider.tsx  StakeUnstakeCard.tsx  TransactionNotification.tsx
frontend/src/components/home/: BonusSystem.tsx  CTASection.tsx  FeeBreakdown.tsx  HeroSection.tsx  LiveStats.tsx
frontend/src/hooks/: useStaking.ts
frontend/src/idl/: staking_express.json  staking_express.ts
frontend/src/lib/: anchor.ts  constants.ts  pda.ts
program/: Anchor.toml  Cargo.toml  package-lock.json  package.json  rust-toolchain
program/programs/staking_express/: Cargo.toml
program/programs/staking_express/src/: bonus_pool.rs  claim_rewards.rs  constants.rs  errors.rs  events.rs  fees.rs  helpers.rs  initialize.rs  lib.rs  math.rs  referral.rs  stake.rs  state.rs  unstake.rs
program/scripts/: distribute-bonus-pool.cjs  fund-wallets.cjs  init-local.cjs  sync-idl.cjs
program/scripts/deployDev/: init-dev.cjs
program/tests/: staking_express.ts
src/app/: layout.tsx  page.tsx
src/app/login/: page.tsx
src/app/register/: page.tsx
