[package]
name = "staking-express"
version = "0.1.0"
description = "Production-grade Solana staking protocol with bonus pools and referral system"
edition = "2021"
license = "MIT"
repository = "https://github.com/Material-Dart/Staking-Express"

[lib]
crate-type = ["cdylib", "lib"]
name = "staking_express"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
constant_time_eq = "=0.3.0"
base64ct = "=1.6.0"

[dev-dependencies]
solana-program-test = "~1.18.0"
solana-sdk = "~1.18.0"
spl-token = { version = "4.0", features = ["no-entrypoint"] }
