[package]
name = "staking-express"
version = "0.1.0"
description = "Production-grade Solana staking protocol with bonus pools and referral system"
edition = "2021"
license = "MIT"
repository = "https://github.com/Material-Dart/Staking-Express"

[lib]
crate-type = ["cdylib", "lib"]
name = "staking_express"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"